<resources>
    <string name="app_name">AuthenticationApp</string>
    <string name ="regis">Register</string>
    <string name="create">Create New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="rbtn">Register</string>
    <string name="login">Already Registered? Login Here</string>


    <string name ="lregis">Login Form</string>
    <string name="lemail">Email</string>
    <string name="lpassword">Password</string>
    <string name="lrbtn">Login </string>
    <string name="llogin">New Here? Create Account</string>

</resources>